--- a/apps/block_scout_web/lib/block_scout_web/templates/common_components/_channel_disconnected_message.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/common_components/_channel_disconnected_message.html.eex
@@ -1,5 +1,5 @@
 <div data-selector="channel-disconnected-message" style="display: none;">
-  <div data-selector="reload-button" class="alert alert-danger" style="padding: 0.75rem 0rem; cursor: pointer;">
+  <div data-selector="reload-button" class="alert alert-danger" style="padding: 0.75rem 0rem; cursor: pointer; display: none;">
     <span href="#" class="alert alert-danger"><%= @text %></span>
   </div>
 </div>
