--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/app.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/app.html.eex
@@ -79,7 +79,7 @@
        false -> indexed_ratio_blocks
        _ -> Chain.indexed_ratio_internal_transactions()
       end %>
-      <%= if not Chain.finished_indexing_from_ratio?(indexed_ratio) do %>
+      <%= if not Chain.finished_indexing_from_ratio?(indexed_ratio) and false do %>
         <div class="alert alert-warning text-center mb-0 p-3" data-seindexed_ratiolector="indexed-status">
           <%= render BlockScoutWeb.CommonComponentsView, "_loading_spinner.html" %>
           <span data-indexed-ratio-blocks="<%= indexed_ratio_blocks %>" data-indexed-ratio="<%= indexed_ratio %>"></span>
